--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Origins you want to allow
 
-ALLOWED_ORIGINS=<https://site1.com>,<https://site2.com>,...
+ALLOWED_ORIGINS=<https://tempile2.vercel.app>,<https://anome.free.nf>,...
