--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Origins you want to allow
 
-ALLOWED_ORIGINS=<https://tempile2.vercel.app>,<https://anome.free.nf>,<https://tempile2-shahids-projects-75bd2e7b.vercel.app>
+ALLOWED_ORIGINS=https://tempile2.vercel.app,https://anome.free.nf,https://tempile2-shahids-projects-75bd2e7b.vercel.app
